CompilerV1/compilerV1Parser.py
# Generated from compilerV1.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO

 
from variableTable import *




class compilerV1Parser ( Parser ):

    grammarFileName = "compilerV1.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "';'", "'main'", "'end'", 
                     "'var'", "':'", "','", "'int'", "'float'", "'void'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "'='", "'<'", 
                     "'>'", "'!='", "'+'", "'-'", "'*'", "'/'", "'if'", 
                     "'else'", "'while'", "'do'", "'print'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STRING", "ID", "INT", "FLOAT", 
                      "WS" ]

    RULE_program = 0
    RULE_vars_ = 1
    RULE_vars_helper = 2
    RULE_id_var = 3
    RULE_type_ = 4
    RULE_funcs = 5
    RULE_func = 6
    RULE_param = 7
    RULE_body = 8
    RULE_statement = 9
    RULE_assign = 10
    RULE_expression = 11
    RULE_exp = 12
    RULE_term = 13
    RULE_factor = 14
    RULE_factor_sign = 15
    RULE_condition = 16
    RULE_else_statement = 17
    RULE_cycle = 18
    RULE_f_call = 19
    RULE_f_call_exp = 20
    RULE_print_ = 21
    RULE_print_exp = 22
    RULE_print_exp_arg = 23
    RULE_cte = 24

    ruleNames =  [ "program", "vars_", "vars_helper", "id_var", "type_", 
                   "funcs", "func", "param", "body", "statement", "assign", 
                   "expression", "exp", "term", "factor", "factor_sign", 
                   "condition", "else_statement", "cycle", "f_call", "f_call_exp", 
                   "print_", "print_exp", "print_exp_arg", "cte" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    STRING=30
    ID=31
    INT=32
    FLOAT=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(compilerV1Parser.ID, 0)

        def vars_(self):
            return self.getTypedRuleContext(compilerV1Parser.Vars_Context,0)


        def funcs(self):
            return self.getTypedRuleContext(compilerV1Parser.FuncsContext,0)


        def body(self):
            return self.getTypedRuleContext(compilerV1Parser.BodyContext,0)


        def getRuleIndex(self):
            return compilerV1Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = compilerV1Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            add_function("global", {}, 0)
            init_main_func_quad()
            self.state = 52
            self.match(compilerV1Parser.T__0)
            self.state = 53
            self.match(compilerV1Parser.ID)
            self.state = 54
            self.match(compilerV1Parser.T__1)
            self.state = 55
            self.vars_()
            self.state = 56
            self.funcs()
            self.state = 57
            self.match(compilerV1Parser.T__2)
            set_func_quad_start(True)
            self.state = 59
            self.body()
            print_funcs_table()
            self.state = 61
            self.match(compilerV1Parser.T__3)
            run_quads()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars_helper(self):
            return self.getTypedRuleContext(compilerV1Parser.Vars_helperContext,0)


        def getRuleIndex(self):
            return compilerV1Parser.RULE_vars_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars_" ):
                listener.enterVars_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars_" ):
                listener.exitVars_(self)




    def vars_(self):

        localctx = compilerV1Parser.Vars_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vars_)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [compilerV1Parser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.match(compilerV1Parser.T__4)
                self.state = 65
                self.vars_helper()
                pass
            elif token in [compilerV1Parser.T__9, compilerV1Parser.T__14]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_helperContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._type_ = None # Type_Context

        def id_var(self):
            return self.getTypedRuleContext(compilerV1Parser.Id_varContext,0)


        def type_(self):
            return self.getTypedRuleContext(compilerV1Parser.Type_Context,0)


        def vars_helper(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compilerV1Parser.Vars_helperContext)
            else:
                return self.getTypedRuleContext(compilerV1Parser.Vars_helperContext,i)


        def getRuleIndex(self):
            return compilerV1Parser.RULE_vars_helper

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars_helper" ):
                listener.enterVars_helper(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars_helper" ):
                listener.exitVars_helper(self)




    def vars_helper(self):

        localctx = compilerV1Parser.Vars_helperContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vars_helper)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.id_var()
            self.state = 70
            self.match(compilerV1Parser.T__5)
            self.state = 71
            localctx._type_ = self.type_()
            self.state = 72
            self.match(compilerV1Parser.T__1)
            add_var((None if localctx._type_ is None else self._input.getText(localctx._type_.start,localctx._type_.stop)), (None if localctx._type_ is None else localctx._type_.start).line, False)
            self.state = 77
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 74
                    self.vars_helper() 
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token

        def ID(self):
            return self.getToken(compilerV1Parser.ID, 0)

        def id_var(self):
            return self.getTypedRuleContext(compilerV1Parser.Id_varContext,0)


        def getRuleIndex(self):
            return compilerV1Parser.RULE_id_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_var" ):
                listener.enterId_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_var" ):
                listener.exitId_var(self)




    def id_var(self):

        localctx = compilerV1Parser.Id_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_id_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            localctx._ID = self.match(compilerV1Parser.ID)
            add_id((None if localctx._ID is None else localctx._ID.text))
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==compilerV1Parser.T__6:
                self.state = 82
                self.match(compilerV1Parser.T__6)
                self.state = 83
                self.id_var()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return compilerV1Parser.RULE_type_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_" ):
                listener.enterType_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_" ):
                listener.exitType_(self)




    def type_(self):

        localctx = compilerV1Parser.Type_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not(_la==compilerV1Parser.T__7 or _la==compilerV1Parser.T__8):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func(self):
            return self.getTypedRuleContext(compilerV1Parser.FuncContext,0)


        def funcs(self):
            return self.getTypedRuleContext(compilerV1Parser.FuncsContext,0)


        def getRuleIndex(self):
            return compilerV1Parser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)




    def funcs(self):

        localctx = compilerV1Parser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.func()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==compilerV1Parser.T__9:
                self.state = 89
                self.funcs()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token

        def ID(self):
            return self.getToken(compilerV1Parser.ID, 0)

        def param(self):
            return self.getTypedRuleContext(compilerV1Parser.ParamContext,0)


        def vars_(self):
            return self.getTypedRuleContext(compilerV1Parser.Vars_Context,0)


        def body(self):
            return self.getTypedRuleContext(compilerV1Parser.BodyContext,0)


        def getRuleIndex(self):
            return compilerV1Parser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)




    def func(self):

        localctx = compilerV1Parser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(compilerV1Parser.T__9)
            self.state = 93
            localctx._ID = self.match(compilerV1Parser.ID)
            add_function((None if localctx._ID is None else localctx._ID.text), {}, (0 if localctx._ID is None else localctx._ID.line))
            self.state = 95
            self.match(compilerV1Parser.T__10)
            self.state = 96
            self.param()
            self.state = 97
            self.match(compilerV1Parser.T__11)
            self.state = 98
            self.match(compilerV1Parser.T__12)
            self.state = 99
            self.vars_()
            set_func_quad_start(False)
            self.state = 101
            self.body()
            set_func_quad_end()
            self.state = 103
            self.match(compilerV1Parser.T__13)
            self.state = 104
            self.match(compilerV1Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token
            self._type_ = None # Type_Context

        def ID(self):
            return self.getToken(compilerV1Parser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(compilerV1Parser.Type_Context,0)


        def param(self):
            return self.getTypedRuleContext(compilerV1Parser.ParamContext,0)


        def getRuleIndex(self):
            return compilerV1Parser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = compilerV1Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [compilerV1Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                localctx._ID = self.match(compilerV1Parser.ID)
                add_id((None if localctx._ID is None else localctx._ID.text))
                self.state = 108
                self.match(compilerV1Parser.T__5)
                self.state = 109
                localctx._type_ = self.type_()
                add_var((None if localctx._type_ is None else self._input.getText(localctx._type_.start,localctx._type_.stop)), (None if localctx._type_ is None else localctx._type_.start).line, True)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==compilerV1Parser.T__6:
                    self.state = 111
                    self.match(compilerV1Parser.T__6)
                    self.state = 112
                    self.param()


                pass
            elif token in [compilerV1Parser.T__11]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compilerV1Parser.StatementContext)
            else:
                return self.getTypedRuleContext(compilerV1Parser.StatementContext,i)


        def getRuleIndex(self):
            return compilerV1Parser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = compilerV1Parser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(compilerV1Parser.T__14)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compilerV1Parser.T__24) | (1 << compilerV1Parser.T__26) | (1 << compilerV1Parser.T__28) | (1 << compilerV1Parser.ID))) != 0):
                self.state = 119
                self.statement()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self.match(compilerV1Parser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(compilerV1Parser.AssignContext,0)


        def condition(self):
            return self.getTypedRuleContext(compilerV1Parser.ConditionContext,0)


        def cycle(self):
            return self.getTypedRuleContext(compilerV1Parser.CycleContext,0)


        def f_call(self):
            return self.getTypedRuleContext(compilerV1Parser.F_callContext,0)


        def print_(self):
            return self.getTypedRuleContext(compilerV1Parser.Print_Context,0)


        def getRuleIndex(self):
            return compilerV1Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = compilerV1Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.condition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.cycle()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 130
                self.f_call()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 131
                self.print_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token

        def ID(self):
            return self.getToken(compilerV1Parser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(compilerV1Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return compilerV1Parser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = compilerV1Parser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            localctx._ID = self.match(compilerV1Parser.ID)
            quad_add_operand((None if localctx._ID is None else localctx._ID.text), (0 if localctx._ID is None else localctx._ID.line), True)
            self.state = 136
            self.match(compilerV1Parser.T__16)
            quad_add_operator("=")
            self.state = 138
            self.expression()
            quad_check_assign()
            self.state = 140
            self.match(compilerV1Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(compilerV1Parser.ExpContext,0)


        def expression(self):
            return self.getTypedRuleContext(compilerV1Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return compilerV1Parser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = compilerV1Parser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.exp()
            quad_check_boolean()
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compilerV1Parser.T__17) | (1 << compilerV1Parser.T__18) | (1 << compilerV1Parser.T__19))) != 0):
                self.state = 150
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [compilerV1Parser.T__17]:
                    self.state = 144
                    self.match(compilerV1Parser.T__17)
                    quad_add_operator("<")
                    pass
                elif token in [compilerV1Parser.T__18]:
                    self.state = 146
                    self.match(compilerV1Parser.T__18)
                    quad_add_operator(">")
                    pass
                elif token in [compilerV1Parser.T__19]:
                    self.state = 148
                    self.match(compilerV1Parser.T__19)
                    quad_add_operator("!=")
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 152
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(compilerV1Parser.TermContext,0)


        def exp(self):
            return self.getTypedRuleContext(compilerV1Parser.ExpContext,0)


        def getRuleIndex(self):
            return compilerV1Parser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)




    def exp(self):

        localctx = compilerV1Parser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.term()
            quad_check_sum_or_sub()
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==compilerV1Parser.T__20 or _la==compilerV1Parser.T__21:
                self.state = 161
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [compilerV1Parser.T__20]:
                    self.state = 157
                    self.match(compilerV1Parser.T__20)
                    quad_add_operator("+")
                    pass
                elif token in [compilerV1Parser.T__21]:
                    self.state = 159
                    self.match(compilerV1Parser.T__21)
                    quad_add_operator("-")
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 163
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(compilerV1Parser.FactorContext,0)


        def term(self):
            return self.getTypedRuleContext(compilerV1Parser.TermContext,0)


        def getRuleIndex(self):
            return compilerV1Parser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = compilerV1Parser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.factor()
            quad_check_mult_or_div()
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==compilerV1Parser.T__22 or _la==compilerV1Parser.T__23:
                self.state = 172
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [compilerV1Parser.T__22]:
                    self.state = 168
                    self.match(compilerV1Parser.T__22)
                    quad_add_operator("*")
                    pass
                elif token in [compilerV1Parser.T__23]:
                    self.state = 170
                    self.match(compilerV1Parser.T__23)
                    quad_add_operator("/")
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 174
                self.term()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._factor_sign = None # Factor_signContext
            self._ID = None # Token
            self._cte = None # CteContext

        def expression(self):
            return self.getTypedRuleContext(compilerV1Parser.ExpressionContext,0)


        def factor_sign(self):
            return self.getTypedRuleContext(compilerV1Parser.Factor_signContext,0)


        def ID(self):
            return self.getToken(compilerV1Parser.ID, 0)

        def cte(self):
            return self.getTypedRuleContext(compilerV1Parser.CteContext,0)


        def getRuleIndex(self):
            return compilerV1Parser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = compilerV1Parser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_factor)
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.match(compilerV1Parser.T__10)
                quad_add_operator("(")
                self.state = 179
                self.expression()
                self.state = 180
                self.match(compilerV1Parser.T__11)
                quad_pop_operator()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                localctx._factor_sign = self.factor_sign()
                self.state = 184
                localctx._ID = self.match(compilerV1Parser.ID)
                quad_add_operand("{}{}".format((None if localctx._factor_sign is None else self._input.getText(localctx._factor_sign.start,localctx._factor_sign.stop)), (None if localctx._ID is None else localctx._ID.text)), (0 if localctx._ID is None else localctx._ID.line), True)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 187
                localctx._factor_sign = self.factor_sign()
                self.state = 188
                localctx._cte = self.cte()
                quad_add_operand("{}{}".format((None if localctx._factor_sign is None else self._input.getText(localctx._factor_sign.start,localctx._factor_sign.stop)), (None if localctx._cte is None else self._input.getText(localctx._cte.start,localctx._cte.stop))), (None if localctx._factor_sign is None else localctx._factor_sign.start).line)
                pass

